--- a/source/scss/components/widget-container.scss
+++ b/source/scss/components/widget-container.scss
@@ -2,7 +2,7 @@
    background-color: $widget-horizontal-bgColor;
    @media (min-width: 768px) {
       position: absolute;
-      bottom: 0rem;
+      bottom: 1.25rem;
       left: 0;
       right: 0;
    }
